outdated and nwe pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main class="bg-gray-100" id="root"></main>
+  <div class="bg-gray-100" id="root"></div>
   <script type="module" src="/src/index.jsx"></script>
 </body>
 
